# reason-map

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_fts_trigram_and_promote.sql
src-tauri/src/: error.rs  lib.rs  main.rs  seed.rs  state.rs
src-tauri/src/analysis/: mod.rs  tests.rs
src-tauri/src/commands/: ai.rs  challenges.rs  evidence.rs  graph_edit.rs  maps.rs  misc.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/embeddings/: local.rs  mod.rs
src-tauri/src/llm/: cli.rs  mod.rs  prompts.rs  types.rs
src-tauri/src/repo/: challenges.rs  chat.rs  edges.rs  events.rs  evidence.rs  history.rs  maps.rs  mod.rs  nodes.rs  search.rs  settings.rs  tests.rs
src/components/: BrandLogo.tsx  Toolbar.tsx
src/components/canvas/: ClaimNode.tsx  GraphCanvas.tsx  layout.ts
src/components/challenges/: ChallengeInbox.tsx
src/components/chat/: ChatPanel.tsx
src/components/inspector/: EdgeInspector.tsx  Inspector.tsx  NodeInspector.tsx
src/components/maps/: MapBar.tsx
src/components/outline/: OutlineEditor.tsx
src/components/search/: SearchBox.tsx
src/components/settings/: AiBackendModal.tsx
src/components/staging/: StagingCards.tsx
src/lib/: ipc.ts
src/state/: store.ts
src/types/: domain.ts
